Adjust padding to prevent overlap

--- a/src/components/team/Team.scss
+++ b/src/components/team/Team.scss
@@ -33,7 +33,6 @@
   .team__title {
     @include typography-title-h4;
     height: $item-height;
-    width: 150px;
     text-align: left;
     font-size: 22px;
     @include min-breakpoint(700px) {
@@ -49,7 +48,7 @@
     flex-wrap: wrap;
     margin: $item-height * -1 auto 0;
     max-width: $item-width * 2;
-    padding: 0;
+    padding: 50px 0;
     .team__person {
       height: $item-height;
       margin-left: $item-width;
@@ -75,6 +74,7 @@
     .team__list {
       margin: $base-space-size * 4 auto $item-height + $base-space-size * 4;
       max-width: $item-width * 3;
+      padding: 0;
       .team__person {
         &:nth-child(2n) {
           margin-left: $item-width;
